# tulipindicators-java

./: .gitignore  README.md  meson.build
java/: .gitignore  build.gradle  settings.gradle
java/src/main/java/net/yageek/tulipindicators/: Bindings.java  Quotable.java  Tulip.java
java/src/test/java/net/yageek/tulipindicators/: TulipTest.java
jni/: meson.build  meson_options.txt
jni/include/: tulip-jni.h  tulip-wrapping.h
jni/src/: tulip-jni.cpp  tulip-wrapping.cpp
jni/subprojects/libtulipindicators/: meson.build
jni/subprojects/libtulipindicators/src/: tiamalgamation.c
tulip/: meson.build
tulip-java/: .gitignore  build.gradle
tulip-java/src/main/java/net/yageek/tulipindicators/: Tulip.java
tulip-java/src/test/java/net/yageek/tulipindicators/: TulipTest.java
tulip-jni/: README.md  meson.build
tulip-jni/include/: tulip-jni.h  tulip-wrapping.h
tulip-jni/src/: tulip-jni.c  tulip-jni.cpp  tulip-wrapping.cpp
tulip/include/: tulip-wrapping.h
tulip/src/: tulip-wrapping.c
